--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Todo-app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_management
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/todo_management
 spring.datasource.username=root
 spring.datasource.password=Mysql123@
 
@@ -8,5 +8,5 @@ spring.datasource.password=Mysql123@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.security.user.name=admin
-spring.security.user.password=admin123
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
