--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.password=Mysql123@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.security.user.name=admin
-#spring.security.user.password=admin123
+spring.security.user.name=admin
+spring.security.user.password=password
+spring.security.user.roles=ADMIN, USER, MANAGER
